--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    //butterknife
+    api "com.jakewharton:butterknife:8.8.1"
+    annotationProcessor "com.jakewharton:butterknife-compiler:8.8.1"
+
+    compile 'com.android.support:design:26.1.0'
+    implementation "com.android.support:recyclerview-v7:26.0.1"
+    implementation "com.android.support:support-annotations:26.0.1"
 }
