--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion 26
@@ -33,4 +34,17 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     implementation "com.android.support:recyclerview-v7:26.0.1"
     implementation "com.android.support:support-annotations:26.0.1"
+
+    // google signin
+    compile 'com.google.android.gms:play-services-auth:11.8.0'
+
+    // firebase auth
+    implementation 'com.google.firebase:firebase-auth:11.8.0'
+    //realtime database
+    compile 'com.google.firebase:firebase-database:11.8.0'
+    //storage
+    compile 'com.google.firebase:firebase-storage:11.8.0'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
