--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,30 +20,33 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
     //butterknife
-    api "com.jakewharton:butterknife:8.8.1"
+    api 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor "com.jakewharton:butterknife-compiler:8.8.1"
-
     compile 'com.android.support:design:26.1.0'
-    implementation "com.android.support:recyclerview-v7:26.0.1"
-    implementation "com.android.support:support-annotations:26.0.1"
-
+    implementation 'com.android.support:recyclerview-v7:26.0.1'
+    implementation 'com.android.support:support-annotations:26.0.1'
     // google signin
     compile 'com.google.android.gms:play-services-auth:11.8.0'
-
     // firebase auth
     implementation 'com.google.firebase:firebase-auth:11.8.0'
     //realtime database
     compile 'com.google.firebase:firebase-database:11.8.0'
     //storage
     compile 'com.google.firebase:firebase-storage:11.8.0'
+    //material drawer
+    implementation('com.mikepenz:materialdrawer:6.0.6@aar') {
+        transitive = true
+    }
+    //picasso
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.google.android.gms:play-services:11.8.0'
 }
 
 
