--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     //picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.google.android.gms:play-services:11.8.0'
+    // image compressor
+    compile 'id.zelory:compressor:2.1.0'
 }
 
 
