--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,10 @@ dependencies {
     }
     //picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.google.android.gms:play-services:11.8.0'
-    // image compressor
-    compile 'id.zelory:compressor:2.1.0'
+
+    // for google maps
+    compile 'com.google.android.gms:play-services-maps:11.8.0'
+    compile 'com.google.android.gms:play-services-location:11.8.0'
 }
 
 
